--- a/index.css
+++ b/index.css
@@ -535,7 +535,7 @@ line-height: 19px;
         position: relative;
         height: 700px;
         width: 100%;
-        background-image: url("map\ back.jpg");
+        background-image: url("./Assets/img/map\ back.jpg");
         background-size: cover;
 }
 .mdiv3i {
@@ -592,7 +592,7 @@ line-height: 19px;
         position: relative;
         width: 100%;
         height: 800px;
-        background-image: url("map\ back.jpg");
+        background-image: url("./Assets/img/map\ back.jpg");
         background-size: cover;
         color: white;
         padding: 10px;
